--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,12 @@ android {
     }
 }
 
+
+
+
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -30,16 +34,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:25.0.0'
-
-
-
     compile 'com.google.firebase:firebase-core:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.firebaseui:firebase-ui-auth:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.22.1'
     implementation 'com.google.android.gms:play-services-maps:11.0.2'
-
     compile 'com.google.android.gms:play-services-location:11.0.2'
+
 }
+
 
 apply plugin: 'com.google.gms.google-services'
